--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.6.0/p5.js"></script>
 </head>
 <body>
+  <div id="canvas"></div>
   <script src="index.js"></script>
 </body>
 </html>
