--- a/index.html
+++ b/index.html
@@ -5,11 +5,22 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>Generative Art</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
   <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.6.0/p5.js"></script>
+  <style>
+    html,
+    body,
+    #canvas {
+      margin: 0;
+      padding: 0;
+      height: 100%;
+      width: 100%;
+      overflow: hidden;
+      background: #f9f8f4;
+    }
+  </style>
 </head>
 <body>
   <div id="canvas"></div>
-  <script src="index.js"></script>
+  <script src="sketch.js"></script>
 </body>
 </html>
