--- a/flow-field/index.html
+++ b/flow-field/index.html
@@ -21,6 +21,7 @@
 </head>
 <body>
   <div id="canvas"></div>
+  <script src="field.js"></script>
   <script src="sketch.js"></script>
 </body>
 </html>
