--- a/flow-field/index.html
+++ b/flow-field/index.html
@@ -22,6 +22,7 @@
 <body>
   <div id="canvas"></div>
   <script src="field.js"></script>
+  <script src="particle.js"></script>
   <script src="sketch.js"></script>
 </body>
 </html>
