Add a margin to the canvas

--- a/flow-field/index.html
+++ b/flow-field/index.html
@@ -17,6 +17,10 @@
       overflow: hidden;
       background: #f9f8f4;
     }
+
+    #canvas {
+      margin: 20px;
+    }
   </style>
 </head>
 <body>
