--- a/flow-field/index.html
+++ b/flow-field/index.html
@@ -3,25 +3,10 @@
 <head>
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>Generative Art</title>
+  <title>Perlin Flow Field - Generative Art</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="../main.css">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.6.0/p5.js"></script>
-  <style>
-    html,
-    body,
-    #canvas {
-      margin: 0;
-      padding: 0;
-      height: 100%;
-      width: 100%;
-      overflow: hidden;
-      background: #f9f8f4;
-    }
-
-    #canvas {
-      margin: 20px;
-    }
-  </style>
 </head>
 <body>
   <div id="canvas"></div>
