Add container to page

--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
   <link rel="stylesheet" href="main.css">
 </head>
 <body>
-  <a href="flow-field">Perlin Flow Field</a>
-  <a href="watercolour">Gaussian Watercolour</a>
+  <div class="container">
+    <a class="link" href="flow-field">Perlin Flow Field</a>
+    <a class="link" href="watercolour">Gaussian Watercolour</a>
+  </div>
 </body>
 </html>
