--- a/watercolour/index.html
+++ b/watercolour/index.html
@@ -9,7 +9,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.6.0/p5.js"></script>
 </head>
 <body>
-  <div id="canvas"></div>
+  <div class="container"></div>
   <script src="sketch.js"></script>
 </body>
 </html>
