Add thumbnails to index

--- a/index.html
+++ b/index.html
@@ -9,8 +9,16 @@
 </head>
 <body>
   <div class="container">
-    <a class="link" href="flow-field">Perlin Flow Field</a>
-    <a class="link" href="watercolour">Gaussian Watercolour</a>
+    <div class="grid">
+      <a class="grid-item container link" href="flow-field">
+        <img src="flow-field/thumbnail.png" alt="Perlin Flow Field" />
+        <span>Perlin Flow Field</span>
+      </a>
+      <a class="grid-item container link" href="watercolour">
+        <img src="watercolour/thumbnail.png" alt="Gaussian Watercolour" />
+        <span>Gaussian Watercolour</span>
+      </a>
+    </div>
   </div>
 </body>
 </html>
