Add line landscape

--- a/index.html
+++ b/index.html
@@ -18,6 +18,10 @@
         <img src="watercolour/thumbnail.png" alt="Gaussian Watercolour" />
         <span>Gaussian Watercolour</span>
       </a>
+      <a class="grid-item container link" href="line-landscape">
+        <img src="line-landscape/thumbnail.png" alt="Line Landscape" />
+        <span>Line Landscape</span>
+      </a>
     </div>
   </div>
 </body>
