Add Georg Nees inspiration

--- a/index.html
+++ b/index.html
@@ -22,6 +22,10 @@
         <img src="line-landscape/thumbnail.png" alt="Line Landscape" />
         <span>Line Landscape</span>
       </a>
+      <a class="grid-item container link" href="georg-nees">
+        <img src="georg-nees/thumbnail.png" alt="Georg Nees" />
+        <span>Georg Nees</span>
+      </a>
     </div>
   </div>
 </body>
