Nest all experiments

--- a/experiments/line-landscape/index.html
+++ b/experiments/line-landscape/index.html
@@ -3,9 +3,9 @@
 <head>
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>Gaussian Watercolour - Generative Art</title>
+  <title>Line Landscape - Generative Art</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="../main.css">
+  <link rel="stylesheet" href="../../main.css">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.6.0/p5.js"></script>
 </head>
 <body>
