--- a/index.html
+++ b/index.html
@@ -10,20 +10,20 @@
 <body>
   <div class="container">
     <div class="grid">
-      <a class="grid-item container link" href="flow-field">
-        <img src="flow-field/thumbnail.png" alt="Perlin Flow Field" />
+      <a class="grid-item container link" href="experiments/flow-field">
+        <img src="experiments/flow-field/thumbnail.png" alt="Perlin Flow Field" />
         <span>Perlin Flow Field</span>
       </a>
-      <a class="grid-item container link" href="watercolour">
-        <img src="watercolour/thumbnail.png" alt="Gaussian Watercolour" />
+      <a class="grid-item container link" href="experiments/watercolour">
+        <img src="experiments/watercolour/thumbnail.png" alt="Gaussian Watercolour" />
         <span>Gaussian Watercolour</span>
       </a>
-      <a class="grid-item container link" href="line-landscape">
-        <img src="line-landscape/thumbnail.png" alt="Line Landscape" />
+      <a class="grid-item container link" href="experiments/line-landscape">
+        <img src="experiments/line-landscape/thumbnail.png" alt="Line Landscape" />
         <span>Line Landscape</span>
       </a>
-      <a class="grid-item container link" href="georg-nees">
-        <img src="georg-nees/thumbnail.png" alt="Georg Nees" />
+      <a class="grid-item container link" href="experiments/georg-nees">
+        <img src="experiments/georg-nees/thumbnail.png" alt="Georg Nees" />
         <span>Georg Nees</span>
       </a>
     </div>
