Add triangle subdivision placeholder

--- a/index.html
+++ b/index.html
@@ -26,6 +26,10 @@
         <img src="experiments/georg-nees/thumbnail.png" alt="Georg Nees" />
         <span>Georg Nees</span>
       </a>
+      <a class="grid-item container link" href="experiments/triangle-subdivision">
+        <img src="experiments/triangle-subdivision/thumbnail.png" alt="Triangle Subdivision" />
+        <span>Triangle Subdivision</span>
+      </a>
     </div>
   </div>
 </body>
