--- a/index.html
+++ b/index.html
@@ -30,6 +30,10 @@
         <img src="experiments/triangle-subdivision/thumbnail.png" alt="Triangle Subdivision" />
         <span>Triangle Subdivision</span>
       </a>
+      <a class="grid-item container link" href="experiments/circle-packing">
+        <img src="experiments/circle-packing/thumbnail.png" alt="Circle Packing" />
+        <span>Circle Packing</span>
+      </a>
     </div>
   </div>
 </body>
