Add clock of clocks

--- a/index.html
+++ b/index.html
@@ -34,6 +34,10 @@
         <img src="experiments/circle-packing/thumbnail.png" alt="Circle Packing" />
         <span>Circle Packing</span>
       </a>
+      <a class="grid-item container link" href="experiments/clock-of-clocks">
+        <img src="experiments/clock-of-clocks/thumbnail.png" alt="Clock of Clocks" />
+        <span>Clock of Clocks</span>
+      </a>
     </div>
   </div>
 </body>
