Add Webpack to compile sketches

--- a/public/flow-field/index.html
+++ b/public/flow-field/index.html
@@ -3,13 +3,15 @@
 <head>
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>Circle Packing - Generative Art</title>
+  <title>Perlin Flow Field - Generative Art</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="../../main.css">
+  <link rel="stylesheet" href="../index.css">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.6.0/p5.js"></script>
 </head>
 <body>
   <div class="container"></div>
+  <script src="field.js"></script>
+  <script src="particle.js"></script>
   <script src="sketch.js"></script>
 </body>
 </html>
