Add concentric circles experiment

--- a/index.html
+++ b/index.html
@@ -38,6 +38,10 @@
         <img src="experiments/clock-of-clocks/thumbnail.png" alt="Clock of Clocks" />
         <span>Clock of Clocks</span>
       </a>
+      <a class="grid-item container link" href="experiments/concentric-circles">
+        <img src="experiments/concentric-circles/thumbnail.png" alt="Concentric Circles" />
+        <span>Concentric Circles</span>
+      </a>
     </div>
   </div>
 </body>
