--- a/index.html
+++ b/index.html
@@ -42,6 +42,10 @@
         <img src="concentric-circles/thumbnail.png" alt="Concentric Circles" />
         <span>Concentric Circles</span>
       </a>
+      <a class="grid-item container link" href="text-pathing">
+        <img src="text-pathing/thumbnail.png" alt="Text Pathing" />
+        <span>Text Pathing</span>
+      </a>
     </div>
   </div>
 </body>
