Add grid walk for shape growing

--- a/public/index.html
+++ b/public/index.html
@@ -46,6 +46,10 @@
         <img src="text-pathing/thumbnail.png" alt="Text Pathing" />
         <span>Text Pathing</span>
       </a>
+      <a class="grid-item container link" href="grid-walk">
+        <img src="grid-walk/thumbnail.png" alt="Grid Walk" />
+        <span>Grid Walk</span>
+      </a>
     </div>
   </div>
 </body>
