Draw an isometric cube

--- a/public/index.html
+++ b/public/index.html
@@ -50,6 +50,10 @@
         <img src="grid-walk/thumbnail.png" alt="Grid Walk" />
         <span>Grid Walk</span>
       </a>
+      <a class="grid-item container link" href="isometric">
+        <img src="isometric/thumbnail.png" alt="Isometric" />
+        <span>Isometric</span>
+      </a>
     </div>
   </div>
 </body>
