--- a/index.html
+++ b/index.html
@@ -51,6 +51,11 @@
           <span>Isometric</span>
         </a>
       
+        <a class="grid-item container link" href="terrariums">
+          <img src="terrariums/thumbnail.png" alt="Terrariums" />
+          <span>Terrariums</span>
+        </a>
+      
     </div>
   </div>
 </body>
