Add illustrative canvas and nameplates

--- a/src/layout.html
+++ b/src/layout.html
@@ -9,7 +9,9 @@
     <link rel="stylesheet" href="../index.css" />
   </head>
   <body>
-    <div class="container"></div>
+    <div class="container">
+      <div id="nameplate"><%= htmlWebpackPlugin.options.title %></div>
+    </div>
     <script src="index.js"></script>
   </body>
 </html>
